# project-handoff-skill

./: .gitignore  LICENSE  PLAN.md  README.md
backlog/: config.yml
backlog/tasks/: task-1 - Research-bestaande-handoff-formats-en-inspectietools.md  task-10 - Dogfood-draai-skill-op-echt-project-van-Jim.md  task-10 - Dogfood-draai-skill-op-een-Hugo-portfolio-site.md  task-11 - Agent-test-kan-subagent-project-starten-vanaf-alleen-de-handoff.md  task-12 - Deploy-skill-naar-~-.claude-skills-project-handoff.md  task-13 - Schrijf-publieke-README-met-usage-en-voorbeelden.md  task-14 - Cleanup-voor-publicatie-persoonsreferenties-licentie-paden.md  task-2 - Definieer-handoff-map-structuur-en-secties.md  task-3 - RED-schrijf-baseline-pressure-scenarios.md  task-4 - RED-draai-baseline-zonder-skill-en-documenteer-gebreken.md  task-5 - Bouw-inspectiescript-voor-project-auto-detectie.md  task-6 - Schrijf-HANDOFF.md-en-CLAUDE.md-templates.md  task-7 - GREEN-schrijf-eerste-versie-SKILL.md.md  task-8 - GREEN-test-skill-op-dummy-project-fixtures.md  task-9 - REFACTOR-loopholes-dichten-en-rationalisaties-adresseren.md
docs/: handoff-spec.md  research.md
handoff/: .env.example  AGENTS.md  CLAUDE.md  HANDOFF.md  REPRODUCE.sh  inventory.json
scripts/: handoff_inspect.py  render_handoff.py
templates/: AGENTS.md.tmpl  CLAUDE.md.tmpl  HANDOFF.md.tmpl  REPRODUCE.sh.tmpl  env.example.tmpl
tests/: agent-test.md  baseline-results.md  dogfood.md  refactor-notes.md
tests/fixtures/python-cli/: pyproject.toml
tests/fixtures/python-cli/src/fixture_cli/: main.py
(+39 files in other folders)
